--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,21 +11,9 @@ app:
   environment:
   - MONGODB=mongodb://mongo:27017/hackathon
   - REDIS=redis://redis:6379
+  - VIRTUAL_HOST=hackabe.app
   ports:
-  - 3000:3000
-test:
-  image: uptownhr/hackable
-  volumes_from:
-  - app
-  working_dir: /app
-  command: npm run test-watch
-  links:
-  - app
-  - redis
-  - mongo
-  environment:
-  - MONGODB=mongodb://mongo:27017/hackathon_test
-  - REDIS=redis://redis:6379
+  - 3000
 mongo:
   image: mongo
 redis:
